--- a/MVVM/View/Page1.xaml
+++ b/MVVM/View/Page1.xaml
@@ -1,20 +1,41 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MVVM.View.Page1">
+             x:Class="MVVM.View.Page1"
+             NavigationPage.HasNavigationBar="False">
     <ContentPage.Content>
         <Grid>
             <StackLayout VerticalOptions="Center">
-                <StackLayout>
+                <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
                     <Label Text="1#" TextColor="Black" FontAttributes="Bold" VerticalOptions="Center"/>
-                    <Entry PlaceholderColor="LightGray" Placeholder="Escribe un numero" HorizontalOptions="StartAndExpand" Text="{Binding N1}" Keyboard="Numeric"/>
+                    <Entry PlaceholderColor="Black" Placeholder="Escribe un numero" HorizontalOptions="StartAndExpand" Text="{Binding N1}" Keyboard="Numeric"/>
                 </StackLayout>
                 <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
                     <Label Text="2#" TextColor="Black" FontAttributes="Bold" VerticalOptions="Center"/>
-                    <Entry PlaceholderColor="White" Placeholder="Escriba un numero" HorizontalOptions="StartAndExpand" Text="{Binding N2}" Keyboard="Numeric"/>
+                    <Entry PlaceholderColor="Black" Placeholder="Escriba un numero" HorizontalOptions="StartAndExpand" Text="{Binding N2}" Keyboard="Numeric"/>
                 </StackLayout>
-                <Button Text="sumar" VerticalOptions="Center" HorizontalOptions="Center" Command="{Binding Sumascommand}" TextTransform="None" Background="black" FontAttributes="Bold" CornerRadius="10"/>
-                <Label Text="{Binding R}" TextColor="Black" HorizontalOptions="Center" FontAttributes="Bold" FontSize="35"/>
+                <Button Text="sumar" VerticalOptions="Center" HorizontalOptions="Center" Command="{Binding Sumascommand}" TextTransform="None" Background="white" FontAttributes="Bold" CornerRadius="10"/>
+                <Label Text="{Binding R}" TextColor="Gray" HorizontalOptions="Center" FontAttributes="Bold" FontSize="35"/>
+                <Button Text="ir a pagina2" HorizontalOptions="Center" CornerRadius="7" BackgroundColor="White" FontAttributes="Bold" Command="{Binding PNavegarpagina2command}"/>
+                <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
+                    <Label TextColor="White" FontAttributes="Bold" Text="Picker: " VerticalOptions="Center"/>
+                    <Picker HorizontalOptions="FillAndExpand" Title="Seldciona una opcion" SelectedItem="{Binding SelecionarTipoUsuario}">
+                        <Picker.ItemsSource>
+                            <x:Array Type="{x:Type x:String}">
+                                <x:String>Administrador</x:String>
+                                <x:String>Empleado</x:String>
+                            </x:Array>
+                        </Picker.ItemsSource>
+                    </Picker>
+                </StackLayout>
+                <Button Text="ir a menu" HorizontalOptions="Center" CornerRadius="7" BackgroundColor="White" FontAttributes="Bold" Command="{Binding PNavegarmenucommand}"/>
+                <StackLayout HorizontalOptions="Center">
+                    <DatePicker Date="{Binding Fecha}">
+                        <DatePicker.Format>dd/MM/yyyy</DatePicker.Format>
+                    </DatePicker>
+                    <Label Text="Resultado Fecha"/>
+                </StackLayout>
+                
             </StackLayout>
         </Grid>
     </ContentPage.Content>
