--- a/MVVM/View/Pokemon/RegistrarPokemon.xaml
+++ b/MVVM/View/Pokemon/RegistrarPokemon.xaml
@@ -3,10 +3,50 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MVVM.View.Pokemon.RegistrarPokemon"         
              NavigationPage.HasNavigationBar="False">
-    <Grid RowDefinitions="80,*" >
-        <StackLayout Orientation="Horizontal" Padding="10">
+    <Grid RowDefinitions="130,*" >
+        <StackLayout Orientation="Horizontal" Padding="20">
             <Image Source="flecha_izquierda.png" WidthRequest="20"/>
+            <Image Source="pokemon_logo_black_transparent.png" WidthRequest="100" HeightRequest="100" HorizontalOptions="CenterAndExpand"/>
+            <Image Source="https://i.ibb.co/QbBwYHH/pelota.png" WidthRequest="40" HeightRequest="40" />
         </StackLayout>
-            <Image Source="pokemon_logo_black_transparent.png" WidthRequest="80" HeightRequest="80"/>
+        <StackLayout Grid.Row="1" Margin="10">
+            <StackLayout Orientation="Horizontal">
+                <Label Text="Nombre: " TextColor="Black" FontAttributes="Bold" VerticalOptions="Center"/>
+                <Entry Placeholder="Ingrese el nombre" FontAttributes="Bold" TextColor="Red" PlaceholderColor="red" FontSize="20" TextTransform="Uppercase" HorizontalOptions="StartAndExpand"/>
+            </StackLayout>
+            <StackLayout Orientation="Horizontal">
+                <Label Text="Poder: " TextColor="Black" FontAttributes="Bold" VerticalOptions="Center"/>
+                <Entry Placeholder="Ingrese el poder" FontAttributes="Bold" TextColor="Red" PlaceholderColor="red" FontSize="20" TextTransform="Uppercase" HorizontalOptions="StartAndExpand"/>
+            </StackLayout>
+            <StackLayout Orientation="Horizontal">
+                <Label Text="Color de fondo: " TextColor="Black" FontAttributes="Bold" VerticalOptions="Center"/>
+                <Entry Placeholder="Ingrese el color de fondo" FontAttributes="Bold" TextColor="Red" PlaceholderColor="red" FontSize="20" TextTransform="Uppercase" HorizontalOptions="StartAndExpand"/>
+            </StackLayout>
+            <StackLayout Orientation="Horizontal">
+                <Label Text="Icono: " TextColor="Black" FontAttributes="Bold" VerticalOptions="Center"/>
+                <Entry Placeholder="Ingrese el icono" FontAttributes="Bold" TextColor="Red" PlaceholderColor="red" FontSize="20" TextTransform="Uppercase" HorizontalOptions="StartAndExpand"/>
+            </StackLayout>
+            <StackLayout Orientation="Horizontal">
+                <Label Text="Numero : " TextColor="Black" FontAttributes="Bold" VerticalOptions="Center"/>
+                <Entry Placeholder="Ingrese el numero" FontAttributes="Bold" TextColor="Red" PlaceholderColor="red" FontSize="20" TextTransform="Uppercase" HorizontalOptions="StartAndExpand"/>
+            </StackLayout>
+            <StackLayout>
+                <Label Text="Vista previa" FontSize="20" TextColor="Black" FontAttributes="Italic" VerticalOptions="Center" HorizontalOptions="Center"/>
+                <Image Source="https://i.ibb.co/RQnHWTQ/ojo.png" WidthRequest="20" HeightRequest="20" HorizontalOptions="Center"/>
+            </StackLayout>
+            <Grid RowDefinitions="50, *" Margin="0,10,0,0">
+                <Frame HasShadow="True" BackgroundColor="Black" Grid.Row="1" WidthRequest="250" HorizontalOptions="Center" CornerRadius="10" Margin="0,-38,0,0">
+                    <StackLayout Margin="0,90,0,0">
+                        <Label Text="#094" TextColor="Purple"/>
+                        <Label Text="Nombre" CharacterSpacing="1" FontSize="20" Margin="0,0,0,5" TextColor="Purple"/>
+                        <Button Text="Fantasma y Veneno" CornerRadius="10" HorizontalOptions="Start" TextTransform="None" HeightRequest="40" BackgroundColor="Purple"/>
+                    </StackLayout>
+                </Frame>
+                <Image Source="https://i.ibb.co/BBwFqC9/image-2023-11-15-081730476.png" Grid.RowSpan="2" HeightRequest="160" VerticalOptions="StartAndExpand"/>
+            </Grid>
+            <Frame HorizontalOptions="Center" Padding="5" Margin="0,10,0,0" CornerRadius="10" HasShadow="False" BackgroundColor="Gray">
+                <Button Text="+" HorizontalOptions="Center" BackgroundColor="Gray" BorderColor="LightGray" BorderWidth="5" CornerRadius="10" FontSize="24" WidthRequest="60" HeightRequest="60"/>
+            </Frame>
+        </StackLayout>
     </Grid>
 </ContentPage>
